// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should have a table with single package data to install if one package was provided and not installed 1`] = `
.emotion-0:hover {
  color: black;
}

.emotion-1:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              Details
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Install
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to install if one package was provided and uninstalled after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
}

.emotion-1:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              Details
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Install
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed 1`] = `
.emotion-0:hover {
  color: black;
}

.emotion-1:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              Details
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Update
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Uninstall
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have a table with single package data to update if one package was provided and installed after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
}

.emotion-1:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              Details
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Update
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Uninstall
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Should have an empty table without package data 1`] = `
.emotion-0:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Should switch to details view of dependency package after clicking the dependency in detail view 1`] = `
.emotion-0:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Return to package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h1>
    dependency
  </h1>
  <p>
    This is the dependency
  </p>
</div>
`;

exports[`Should switch to details view of package after clicking the button 1`] = `
.emotion-0:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Return to package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h1>
    bar
  </h1>
  <p>
    foo
  </p>
  <h2>
    Website for more information
  </h2>
  <p>
    https://mypkg.com
  </p>
  <h2>
    Dependencies
  </h2>
  <ul>
    <li>
      dependency
    </li>
  </ul>
</div>
`;

exports[`Should switch to details view of package after clicking the button and return to overview on click on back 1`] = `
.emotion-0:hover {
  color: black;
}

.emotion-1:hover {
  color: black;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeLarge MuiButton-sizeLarge emotion-0"
  >
    <span
      class="MuiButton-label"
    >
      Update package listing
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <table>
    <thead>
      <tr>
        <td>
          Name
        </td>
        <td>
          Package Name
        </td>
        <td>
          Description
        </td>
        <td>
          Actions
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          bar
        </td>
        <td>
          barPackage
        </td>
        <td>
          foo
        </td>
        <td>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
            data-testid="barPackage-details"
          >
            <span
              class="MuiButton-label"
            >
              Details
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSizeSmall MuiButton-sizeSmall emotion-1"
          >
            <span
              class="MuiButton-label"
            >
              Install
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
